<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="800dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:layout_marginTop="0dp"
   
    android:background="@drawable/dialogbackground"
    android:orientation="vertical" > 

     -->
    
    

    -->
     <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="#ffffff"
        android:textSize="72sp"
        android:textStyle="bold"
        android:visibility="visible" /> 
        
    <LinearLayout
        android:id="@+id/dialog_content_layout"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_marginTop="200dp"
        android:gravity="center">
        
     
        
    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding ="50dp"
        android:gravity="center"
        android:text="@string/want_restart"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="visible" /> 
        
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding ="50dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="gone" /> 
        
  
        
    </LinearLayout>

     <Button
        android:id="@+id/leave_button"
        android:layout_width="200dip"
        android:layout_height="60dip"
        android:layout_marginLeft="500dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="5dp"
        android:text="@string/leave"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="visible" /> 

    <Button
        android:id="@+id/restart_button"
        android:layout_width="200dip"
        android:layout_height="60dip"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="100dp"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="5dp"
        android:text="@string/restart"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="visible" />
    
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="200dip"
        android:layout_height="60dip"
        android:layout_marginLeft="500dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone" /> 

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dip"
        android:layout_height="60dip"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="100dp"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="5dp"
        android:text="@string/save"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>