<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    tools:context=".MainActivity" >


 
 
   <Button
        android:id="@+id/button_2"
        android:layout_width="200dip"
        android:layout_height="70dip"
        android:layout_marginLeft="650dp"
        android:layout_marginTop="450dip"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:onClick = "onClick"
        android:text="@string/start"
        android:textColor="#ffffff"
        android:textSize="32sp" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="200dip"
        android:layout_height="70dip"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="650dp"
        android:background="@drawable/button_background"
         android:onClick = "onClick"
        android:gravity="center"
        android:text="@string/help"
        android:textColor="#ffffff"
        android:textSize="32sp" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="200dip"
        android:layout_height="70dip"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="650dp"
        android:background="@drawable/button_background"
         android:onClick = "onClick"
        android:gravity="center"
        android:text="@string/highscores"
        android:textColor="#ffffff"
        android:textSize="32sp" />  -->
 

</RelativeLayout>
     
        
      
